--- a/CSS 2/styles.css
+++ b/CSS 2/styles.css
@@ -1,5 +1,5 @@
 body{
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: monospace;
     font-size: 16px;
     line-height: 1.6em;
     margin: 0;
@@ -56,13 +56,21 @@ h1{
     float: left;
 }
 
-#main
+#main h2
 {
     text-align: center;
     float: right;
     width: 50%;
     padding: 0 30px;
     box-sizing: border-box;
+}
+#main p{
+    font-weight: normal;
+    font-size: 16px;
+    font-family: 'Courier New', Courier, monospace;
+}
+#main h3{
+    float: left;
 }
 #sidebar{
     float: left;
