--- a/CSS 2/styles.css
+++ b/CSS 2/styles.css
@@ -1,5 +1,6 @@
 body{
-    font-family: monospace;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     line-height: 1.6em;
     margin: 0;
@@ -13,16 +14,17 @@ body{
     clear: both;
 }
 #mainHeader{
-    background: #333;
+    background: black;
     color: white;
 }
 #mainNav{
-    background: #cccccc;
+    background-color: white;
     color:black;
     position: -webkit-sticky;
     position: sticky;
     top: 0;
 }
+
 #mainNav u1{
 padding: 0;
 margin: 0;
@@ -43,8 +45,12 @@ list-style: none;
 #jumbo{
     text-align: center;
 }
+
 #jumbo h1{
-    color: black;
+    background-image: url('stars.jpg');
+    background-size: 500px;
+    padding: 10px 10px;
+    color: whitesmoke;
     font-size: 45px;
     padding-top: 20px;
     line-height: 1.6em;
@@ -58,19 +64,35 @@ h1{
 
 #main h2
 {
+    background-color: black;
+    right: 40px;
+    /* bottom: 80px; */
     text-align: center;
     float: right;
     width: 50%;
-    padding: 0 30px;
+    padding: 15px 30px;
     box-sizing: border-box;
 }
 #main p{
     font-weight: normal;
     font-size: 16px;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Arial, Helvetica, sans-serif;
 }
 #main h3{
     float: left;
+}
+#main h4{
+    float: right;
+    padding: 0px 50px;
+    /* width: 20px;
+    height: 20px; */
+}
+.hover:hover {
+    position: relative;
+    transition: transform .2s;
+    transform: scale(1.3);
+  margin: 0 auto;
+
 }
 #sidebar{
     float: left;
