--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body{
     color: white;
     font-family: Arial, Helvetica, sans-serif;
@@ -146,7 +145,12 @@ h1{
         border: none;
     }
 }
+*{
+    padding: 0;
+    margin: 0;
+}
 #game{
+    background-color: black;
     width: 400px;
     height: 500px;
     border: 1px solid black;
@@ -155,26 +159,26 @@ h1{
 #character{
     width: 20px;
     height: 20px;
-    background-color: red;
+    background-color: white;
     border-radius: 50%;
     position: relative;
     top: 440px;
-    left:190px;
-    z-index: 100000;
+    left: 190px;
+    z-index: 1000000;
 }
-
-/* p{
-    border-top: 5px solid blue;
-    border-right: 2px dotted green;
-    border-bottom: 5px dashed red;
-    border-left: 2px dotted green;
-    border: 3px solid green;
-    padding-top: 10px;
-    padding-right: 20px;
-    padding-bottom: 10px;
-    padding-left: 20px;
-    padding: 10px 20px 10px 20px;
-    padding: 10px 20px;
-    padding: 20px;
-    margin-top: 40px;
-} */
+.block{
+    width: 400px;
+    height: 20px;
+    background-color: white;
+    position: relative;
+    top: 100px;
+    margin-top: -20px;
+}
+.hole{
+    width: 40px;
+    height: 20px;
+    background-color: black;
+    position: relative;
+    top: 100px;
+    margin-top: -20px;
+}
