--- a/CSS 2/styles.css
+++ b/CSS 2/styles.css
@@ -1,14 +1,17 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
 body{
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
+    background-color: darkred;
+    color: black;
+    font-family: "Montserrat","Montserrat" ;
     font-size: 16px;
     line-height: 1.6em;
     margin: 0;
 }
 .container{
     width: 80%;
-    margin: auto;
+    margin: -.7% auto auto;
     overflow: hidden;
 }
 .clearFix{
@@ -19,11 +22,14 @@ body{
     color: white;
 }
 #mainNav{
-    background-color: white;
+    background-color: black;
     color:black;
     position: -webkit-sticky;
     position: sticky;
+    z-index: 5;
+    align-items: center;
     top: 0;
+    box-shadow: 3px 3px 12px;
 }
 
 #mainNav u1{
@@ -33,14 +39,18 @@ list-style: none;
 }
 #mainNav li{
     display: inline;
-    padding: 5px 10px;
+
+    /* padding: 7px 20px; */
 }
 #mainNav a{
-    color:black;
+    float: left;
+    color:white;
     text-decoration: none;
     font-size: 18px;
+    padding: 7px 15px;
 }
 #mainNav li:hover{
+    float: left;
     background: #aaa;
 }
 #jumbo{
@@ -50,37 +60,56 @@ list-style: none;
 #jumbo h1{
     background-image: url('stars.jpg');
     background-size: 500px;
+    margin: 3% 0px -5px;
     padding: 10px 10px;
-    color: whitesmoke;
+    color: white;
     font-size: 45px;
     padding-top: 20px;
     line-height: 1.6em;
 }
 h1{
-    color:white;
+    color:black;
 }
 #jumbo h2{
+    
     float: left;
+}
+#main{
+    border-radius: 10px;
+    color: white;
+    line-height: 3px;
+    background-color: black;
+    /* box-shadow: 3px 5px 12px gray; */
 }
 
 #main h2
 {
-    background-color: black;
-    right: 40px;
-    /* bottom: 80px; */
-    text-align: center;
-    float: right;
-    width: 50%;
-    padding: 15px 30px;
+    transform: translate(20%,50%);
+    text-align: start;
+    float: left;
+    font-size: 40px;
+    line-height: 30px;
+    /* padding-right: 50%; */
     box-sizing: border-box;
 }
 #main p{
-    font-weight: normal;
-    font-size: 16px;
-    font-family: Arial, Helvetica, sans-serif;
+
+    font-size: 50px;
+    font-weight: bold;
+    font-family: 'Raleway';
+    /* margin: 45px 0px 50px;   */
+}
+#main p2{
+    font-size: 30px;
+    line-height: 30px;
+    font-weight: lighter;
+    font-family: 'Raleway';
+    /* margin: 45px 0px 50px;   */
 }
 #main h3{
-    float: left;
+   /* bottom: 40px; */
+   transform: translate(20%, 0%);
+   /* transform: scale(.8); */
 }
 #main h4{
     float: right;
@@ -95,6 +124,47 @@ h1{
   margin: 0 auto;
 
 }
+.about-section{
+    z-index: -10;
+    width: 90%;
+    height: 350px;
+    background: black;
+    color: white;
+    border-radius: 20px;
+    box-shadow: 2px 2px 12px black;
+    display: flex;
+    margin: -2% auto 20px auto;
+    position: relative;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.about-section p:nth-child(1){
+    font-family: "Raleway";
+    font-size: 30px;
+    font-weight: bolder;
+}
+.about-section p:nth-child(2){
+    font-family: "Montserrat";
+    font-weight: bolder;
+    font-size: 20px;
+}
+.resume{
+    height: 30px;
+    width: 130px;
+    font-family: "Montserrat";
+    border-radius: 20px;
+    font-weight: bold;
+    color: white;
+    background-color: black;
+    border-color: white;
+    font-size: 14;
+    z-index: 50;
+    margin: -5% 160px;
+    float: right;
+}
+.about-section button:active{
+    transform: scale(.5);
+}
 #sidebar{
     float: left;
     width: 30%;
@@ -108,10 +178,17 @@ h1{
     background: #333;
     color: #fff;
     text-align: center;
-    padding: 20px;
-    margin-top: 50px;
+    padding: 5px;
+    margin-top: 30px;
 }
-#pExample{
+#fixed{
+    position: fixed;
+    bottom: 0;
+    right: 50px;
+    background: #ff652f;
+    padding: 5px;
+}
+/* #pExample{
     width: 400px;
     height: 400px;
     border: 1px solid #333;
@@ -161,7 +238,7 @@ h1{
     top: 440px;
     left:190px;
     z-index: 100000;
-}
+} */
 
 /* p{
     border-top: 5px solid blue;
