--- a/style.css
+++ b/style.css
@@ -1,6 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap');
+.instructions{
+font-family: 'Montserrat';
+font-weight: 1000000;
+color: black;
+border: black;
+border-radius: 20px;
+font-size: 20px;
+/* width: 0px; */
+}
 body{
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Montserrat';
+    background-color: darkred;
     font-size: 16px;
     line-height: 1.6em;
     margin: 0;
@@ -14,12 +24,12 @@ body{
     clear: both;
 }
 #mainHeader{
-    background: black;
-    color: white;
+
+    color: white; 
 }
 #mainNav{
-    background-color: white;
-    color:black;
+    background-color: black;
+    color:white;
     position: -webkit-sticky;
     position: sticky;
     top: 0;
@@ -35,109 +45,15 @@ list-style: none;
     padding: 5px 10px;
 }
 #mainNav a{
-    color:black;
+    color:white;
     text-decoration: none;
     font-size: 18px;
 }
 #mainNav li:hover{
     background: #aaa;
 }
-#jumbo{
-    text-align: center;
-}
 
-#jumbo h1{
-    background-image: url('stars.jpg');
-    background-size: 500px;
-    padding: 10px 10px;
-    color: whitesmoke;
-    font-size: 45px;
-    padding-top: 20px;
-    line-height: 1.6em;
-}
-h1{
-    color:white;
-}
-#jumbo h2{
-    float: left;
-}
-
-#main h2
-{
-    background-color: black;
-    right: 40px;
-    /* bottom: 80px; */
-    text-align: center;
-    float: right;
-    width: 50%;
-    padding: 15px 30px;
-    box-sizing: border-box;
-}
-#main p{
-    font-weight: normal;
-    font-size: 16px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-#main h3{
-    float: left;
-}
-#main h4{
-    float: right;
-    padding: 0px 50px;
-    /* width: 20px;
-    height: 20px; */
-}
-.hover:hover {
-    position: relative;
-    transition: transform .2s;
-    transform: scale(1.3);
-  margin: 0 auto;
-
-}
-#sidebar{
-    float: left;
-    width: 30%;
-    padding: 10px;
-    border-right: 1px solid black;
-    box-sizing: border-box;
-    letter-spacing: .2em;
-    word-spacing: 1em;
-}
-#mainfooter{
-    background: #333;
-    color: #fff;
-    text-align: center;
-    padding: 20px;
-    margin-top: 50px;
-}
-#pExample{
-    width: 400px;
-    height: 400px;
-    border: 1px solid #333;
-    border-radius: 20px 10px 0 5px;
-    position: relative;
-}
-#pExample span:first-child{
-    position: absolute;
-    bottom: 20px;
-    right: 100px;
-    font-style: italic;
-    font-weight: 800;
-    text-decoration: underline;
-    text-transform: uppercase;
-}
-#pExample span:last-child{
-    position: absolute;
-    top: 100px;
-    left: 30px;
-}
-#fixed{
-    position: fixed;
-    bottom: 0;
-    right: 50px;
-    background: #ff652f;
-    padding: 5px;
-}
+/* Game */
 @media (max-width:600px){
     #main, #sidebar{
         width: 100%;
