--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 .instructions{
 font-family: 'Montserrat';
 font-weight: 1000000;
-color: black;
+color: white;
 border: black;
 border-radius: 20px;
 font-size: 20px;
