--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 .instructions{
 font-family: 'Montserrat';
 font-weight: 1000000;
-color: white;
+color: black;
 border: black;
 border-radius: 20px;
 font-size: 20px;
@@ -10,7 +10,7 @@ font-size: 20px;
 }
 body{
     font-family: 'Montserrat';
-    background-color: darkred;
+    background-color: whitesmoke;
     font-size: 16px;
     line-height: 1.6em;
     margin: 0;
